force-app/main/default/objects/Snapshot__c/Snapshot__c.object-meta.xml
<CustomObject>
    <description>Object to capture the Analytic Snapshot for the key reports</description>
    <label>Snapshot</label>
    <nameField>
        <displayFormat>SS-{000000}</displayFormat>
        <label>Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>