force-app/main/default/objects/Snapshot__c/fields/Active_Pipeline_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Pipeline_Count__c</fullName>
    <description>Capture Active Pipeline Count</description>
    <label>Active Pipeline Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>