force-app/main/default/objects/Snapshot__c/fields/Avg_Days_between_Application_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_between_Application_Acceptance__c</fullName>
    <description>Capture &quot;Avg-Days between Application-Acceptance&quot; for Velocity Reporting</description>
    <label>Avg-Days between Application-Acceptance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>