force-app/main/default/objects/Snapshot__c/fields/Avg_Days_between_Enquiry_and_Visit__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_between_Enquiry_and_Visit__c</fullName>
    <description>Capture &quot;Avg-Days between Enquiry-Visit&quot; for Velocity Reporting</description>
    <label>Avg-Days between Enquiry-Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>