force-app/main/default/objects/Snapshot__c/fields/Avg_Days_between_Enquiry_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_between_Enquiry_Enrolled__c</fullName>
    <description>Capture &quot;Days between Enquiry and Enrolled&quot; for Velocity Reporting</description>
    <label>Avg-Days between Enquiry-Enrolled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>