force-app/main/default/objects/Snapshot__c/fields/Avg_Days_between_Enrolled_Started__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_between_Enrolled_Started__c</fullName>
    <description>Capture &quot;Avg-Days between Enrolled-Started&quot; for Velocity Reporting</description>
    <label>Avg-Days between Enrolled-Started</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>