force-app/main/default/objects/Snapshot__c/fields/Avg_Days_between_Visit_Application__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_between_Visit_Application__c</fullName>
    <description>Capture &quot;Avg-Days between Visit-Application&quot; for Velocity Reporting</description>
    <label>Avg-Days between Visit-Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>