force-app/main/default/objects/Snapshot__c/fields/CBL_Total_Users__c.field-meta.xml
<CustomField>
    <fullName>CBL_Total_Users__c</fullName>
    <label>CBL Total Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>