force-app/main/default/objects/Snapshot__c/fields/CVR_Enquiry_Vs_Visit_FY21__c.field-meta.xml
<CustomField>
    <fullName>CVR_Enquiry_Vs_Visit_FY21__c</fullName>
    <label>CVR (Enquiry Vs Visit) - FY21</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>