force-app/main/default/objects/Snapshot__c/fields/CVR_Visit_Vs_Application_FY21__c.field-meta.xml
<CustomField>
    <fullName>CVR_Visit_Vs_Application_FY21__c</fullName>
    <label>CVR (Visit Vs Application) - FY21</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>