force-app/main/default/objects/Snapshot__c/fields/Day_Boarding__c.field-meta.xml
<CustomField>
    <fullName>Day_Boarding__c</fullName>
    <description>Day/Boarding for the Visit KPI</description>
    <label>Day/Boarding</label>
    <length>80</length>
    <type>Text</type>
</CustomField>