force-app/main/default/objects/Snapshot__c/fields/Days_between_Application_and_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Application_and_Enrolled__c</fullName>
    <description>Capture &quot;Days between Application and Enrolled&quot; for Velocity Report</description>
    <label>Sum-Days between Application-Enrolled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>