force-app/main/default/objects/Snapshot__c/fields/Days_between_Enquiry_and_Visit__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Enquiry_and_Visit__c</fullName>
    <description>Capture &quot;Days between Enquiry and Visit&quot; for the Velocity Report</description>
    <label>Sum-Days between Enquiry-Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>