force-app/main/default/objects/Snapshot__c/fields/Days_between_Enrolled_and_Started__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Enrolled_and_Started__c</fullName>
    <description>Capture &quot;Days between Enrolled and Started&quot; for Velocity Report</description>
    <label>Sum-Days between Enrolled-Started</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>