force-app/main/default/objects/Snapshot__c/fields/Days_between_Visit_and_Application__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Visit_and_Application__c</fullName>
    <description>Capture &quot;Days between Visit and Application&quot; for the Velocity Report</description>
    <label>Sum-Days between Visit-Application</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>