force-app/main/default/objects/Snapshot__c/fields/Enrolment_Year__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Year__c</fullName>
    <label>Enrolment Year</label>
    <length>25</length>
    <type>Text</type>
</CustomField>