force-app/main/default/objects/Snapshot__c/fields/Lead_older_than_1_day__c.field-meta.xml
<CustomField>
    <fullName>Lead_older_than_1_day__c</fullName>
    <description>Field to capture the &quot;Lead older than 1 day&quot; count</description>
    <label>Lead older than 1 day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>