force-app/main/default/objects/Snapshot__c/fields/Number_Of_Duplicates_Contact__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Duplicates_Contact__c</fullName>
    <description>Capture Number for Potential Contact Duplicates</description>
    <label>Number Of Duplicates (Contact)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>