force-app/main/default/objects/Snapshot__c/fields/Number_of_Duplicates_Lead__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Duplicates_Lead__c</fullName>
    <description>Capture Number of Potential Lead Duplicates</description>
    <label>Number of Duplicates (Lead)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>