force-app/main/default/objects/Snapshot__c/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>School Name for the User Adoption report</description>
    <label>School Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>