force-app/main/default/objects/Snapshot__c/fields/Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>Sub_Region__c</fullName>
    <description>Capture Sub Region for Velocity Report</description>
    <label>Sub Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>