force-app/main/default/objects/Snapshot__c/fields/Sum_Of_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Active_Users__c</fullName>
    <description>Sum Of Active for the User Adoption report</description>
    <label>Sum Of Active Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>