force-app/main/default/objects/Snapshot__c/fields/Sum_Of_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Waitlist__c</fullName>
    <description>Capture Sum of Waitlist</description>
    <label>Sum Of Waitlist</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>