force-app/main/default/objects/Snapshot__c/fields/Total_Application__c.field-meta.xml
<CustomField>
    <fullName>Total_Application__c</fullName>
    <description>Total Application for the Application KPI Report</description>
    <label>Total Application</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>