force-app/main/default/objects/Snapshot__c/fields/Total_Enquiry_Lead__c.field-meta.xml
<CustomField>
    <fullName>Total_Enquiry_Lead__c</fullName>
    <description>Total Enquiry (Lead) for the Enquiry (Lead) KPI</description>
    <label>Total Enquiry (Lead)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>