force-app/main/default/objects/Snapshot__c/fields/Total_Enquiry_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Total_Enquiry_Oppty__c</fullName>
    <description>Total Enquiry (Oppty) for the Enquiry KPI (Oppty) Reports</description>
    <label>Total Enquiry (Oppty)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>