force-app/main/default/objects/Snapshot__c/fields/Total_Of_Visit_OS__c.field-meta.xml
<CustomField>
    <fullName>Total_Of_Visit_OS__c</fullName>
    <label>Total # Of Visit (OS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>