force-app/main/default/objects/Snapshot__c/fields/Total_Of_Visits_FY21__c.field-meta.xml
<CustomField>
    <fullName>Total_Of_Visits_FY21__c</fullName>
    <label>Total # Of Visits (FY21)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>