force-app/main/default/objects/Snapshot__c/fields/Total_Visit__c.field-meta.xml
<CustomField>
    <fullName>Total_Visit__c</fullName>
    <description>Total Visit for the Visit KPI Report</description>
    <label>Total Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>