force-app/main/default/objects/Snapshot__c/fields/User_Adoption_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>User_Adoption_Timeframe__c</fullName>
    <description>User Adoption timeframe for the User Adoption report</description>
    <formula>CreatedDate</formula>
    <label>Snapshot Timeframe</label>
    <type>Date</type>
</CustomField>