force-app/main/default/objects/Snapshot__c/fields/User_Count__c.field-meta.xml
<CustomField>
    <fullName>User_Count__c</fullName>
    <description>User Count for the User Adoption report</description>
    <label>User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>