force-app/main/default/objects/Snapshot__c/fields/Visit_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Event_Type__c</fullName>
    <description>Visit Event Type for Visit KPI (Virtual)</description>
    <label>Visit Event Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>